--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@netlify/plugin-nextjs": "^5.13.2",
     "framer-motion": "^12.23.12",
     "gsap": "^3.13.0",
     "next": "15.5.3",
