--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@netlify/plugin-nextjs": "^5.13.2",
+    "@vitalets/google-translate-api": "^9.2.1",
     "framer-motion": "^12.23.12",
     "gsap": "^3.13.0",
     "lenis": "^1.3.11",
